unpackaged/main/default/objects/Account/fields/Budget_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Budget_Cycle__c</fullName>
    <label>Budget Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CY</fullName>
            </value>
            <value>
                <fullName>FY</fullName>
            </value>
            <value>
                <fullName>CUSTOM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>