unpackaged/main/default/objects/Account/fields/Firm_Dues_Affiliations__c.field-meta.xml
<CustomField>
    <fullName>Firm_Dues_Affiliations__c</fullName>
    <description>Count of Active Child Affiliations where Firm Dues = TRUE</description>
    <inlineHelpText>Count of Active Child Affiliations where Firm Dues = TRUE</inlineHelpText>
    <label>Firm Dues Affiliations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>