unpackaged/main/default/objects/Account/fields/FS_Account_18C_ID__c.field-meta.xml
<CustomField>
    <fullName>FS_Account_18C_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Account 18C ID</label>
    <type>Text</type>
</CustomField>