unpackaged/main/default/objects/Account/fields/FS_Account_PublicOfficialUser__c.field-meta.xml
<CustomField>
    <fullName>FS_Account_PublicOfficialUser__c</fullName>
    <description>Do you qualify as a public official? NYSBA is registered with the NYS Joint Commission on Public Ethics pursuant to the Lobbying Act to engage in lobbying activities. Consequently, public officials cannot accept certain benefits from the Association. Further information can be obtained by contacting an official's agency ethics officer or the Association at (518) 463-3200.</description>
    <inlineHelpText>NYSBA is registered with the NYS Joint Commission on Public Ethics pursuant to the Lobbying Act to engage in lobbying activities. Consequently, public officials cannot accept certain benefits from the Association. Info: (518) 463-3200.</inlineHelpText>
    <label>Public Official</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>