unpackaged/main/default/objects/Account/fields/FS_Accredited__c.field-meta.xml
<CustomField>
    <fullName>FS_Accredited__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if the law school is accredited</inlineHelpText>
    <label>Accredited</label>
    <type>Checkbox</type>
</CustomField>