unpackaged/main/default/objects/Account/fields/FS_Acct_PublicOfficialConfirmationStatus__c.field-meta.xml
<CustomField>
    <fullName>FS_Acct_PublicOfficialConfirmationStatus__c</fullName>
    <label>Public Official Confirmation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes (confirmed)</fullName>
            </value>
            <value>
                <fullName>No (confirmed)</fullName>
            </value>
            <value>
                <fullName>Caution (system flag)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>