unpackaged/main/default/objects/Account/fields/FS_API_Billing_County__c.field-meta.xml
<CustomField>
    <fullName>FS_API_Billing_County__c</fullName>
    <label>API Billing County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>