unpackaged/main/default/objects/Account/fields/FS_BarType__c.field-meta.xml
<CustomField>
    <fullName>FS_BarType__c</fullName>
    <inlineHelpText>Special-Purpose bar denotes focus on a specific practice area, where Specialty Bar is based on cultural and/or religious interests.</inlineHelpText>
    <label>Bar Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ethnic</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Special-Purpose</fullName>
            </value>
            <value>
                <fullName>Specialty</fullName>
            </value>
            <value>
                <fullName>Women's Bar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>