unpackaged/main/default/objects/Account/fields/FS_Billing_County__c.field-meta.xml
<CustomField>
    <fullName>FS_Billing_County__c</fullName>
    <formula>IF(BillingState == 'New York', FS_API_Billing_County__c, IF(BillingState == '', '', 'Out of State'))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing County</label>
    <type>Text</type>
</CustomField>