unpackaged/main/default/objects/Account/fields/FS_Billing_Judicial_District__c.field-meta.xml
<CustomField>
    <fullName>FS_Billing_Judicial_District__c</fullName>
    <description>Billing Judicial District</description>
    <formula>IF(BillingState ="New York", 
CASE(FS_API_Billing_County__c  ,
"New York","1",
"Kings","2",
"Richmond","13",
"Albany","3",
"Columbia","3",
"Greene","3",
"Rensselaer","3",
"Schoharie","3",
"Sullivan","3",
"Ulster","3",
"Clinton","4",
"Essex","4",
"Franklin","4",
"Hamilton","4",
"Montgomery","4",
"Saint Lawrence","4",
"Saratoga","4",
"Schenectady","4",
"Warren","4",
"Washington","4",
"Herkimer","5",
"Jefferson","5",
"Lewis","5",
"Oneida","5",
"Onondaga","5",
"Oswego","5",
"Broome","6",
"Chenango","6",
"Chemung","6",
"Cortland","6",
"Delaware","6",
"Madison","6",
"Otsego","6",
"Schuyler","6",
"Tioga","6",
"Tompkins","6",
"Cayuga","7",
"Livingston","7",
"Monroe","7",
"Ontario","7",
"Seneca","7",
"Steuben","7",
"Wayne","7",
"Yates","7",
"Allegany","8",
"Cattaraugus","8",
"Chautauqua","8",
"Erie","8",
"Genesee","8",
"Niagara","8",
"Orleans","8",
"Wyoming","8",
"Dutchess","9",
"Orange","9",
"Putnam","9",
"Rockland","9",
"Westchester","9",
"Fulton","4",
"Out of State","99",
"Foreign","99",
"APO-FPO","99",
"Unknown","None",
"Bronx","12",
"Nassau","10",
"Suffolk","10",
"Queens","11",
"")
, "None")</formula>
    <inlineHelpText>Billing Judicial District</inlineHelpText>
    <label>Billing Judicial District</label>
    <type>Text</type>
</CustomField>