unpackaged/main/default/objects/Account/fields/FS_Created_By_Customer__c.field-meta.xml
<CustomField>
    <fullName>FS_Created_By_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the account was created through the community portal during self-registration</description>
    <label>Created By Customer</label>
    <type>Checkbox</type>
</CustomField>