unpackaged/main/default/objects/Account/fields/FS_Directoryemail__c.field-meta.xml
<CustomField>
    <fullName>FS_Directoryemail__c</fullName>
    <label>Directory Email</label>
    <type>Email</type>
</CustomField>