unpackaged/main/default/objects/Account/fields/FS_Firm_Billing_Discount__c.field-meta.xml
<CustomField>
    <fullName>FS_Firm_Billing_Discount__c</fullName>
    <inlineHelpText>Firm Billing Discount - No functionality is tied to this field; billing amounts should be adjusted when generated. (Explore price rules or source codes in the future)</inlineHelpText>
    <label>Firm Billing Discount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>