unpackaged/main/default/objects/Account/fields/FS_FrequencyofElections__c.field-meta.xml
<CustomField>
    <fullName>FS_FrequencyofElections__c</fullName>
    <label>Frequency of Elections</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Every Year</fullName>
            </value>
            <value>
                <fullName>Every Other Year</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>