unpackaged/main/default/objects/Account/fields/FS_Handicap_Accessible__c.field-meta.xml
<CustomField>
    <fullName>FS_Handicap_Accessible__c</fullName>
    <label>Handicap Accessible?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unconfirmed</fullName>
                <default>true</default>
                <label>Unconfirmed</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes Provisionally</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>