unpackaged/main/default/objects/Account/fields/FS_Hide_From_Portal__c.field-meta.xml
<CustomField>
    <fullName>FS_Hide_From_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked this will hide this account from the list of law schools in the new user registration page.</description>
    <inlineHelpText>If checked this will hide this account from the list of law schools in the new user registration page.</inlineHelpText>
    <label>Hide From Portal</label>
    <type>Checkbox</type>
</CustomField>