unpackaged/main/default/objects/Account/fields/FS_Law_School_Alias__c.field-meta.xml
<CustomField>
    <fullName>FS_Law_School_Alias__c</fullName>
    <label>Law School Alias</label>
    <length>180</length>
    <type>Text</type>
</CustomField>