unpackaged/main/default/objects/Account/fields/FS_Law_School_Code__c.field-meta.xml
<CustomField>
    <fullName>FS_Law_School_Code__c</fullName>
    <label>Law School Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>