unpackaged/main/default/objects/Account/fields/FS_NumberofMembers__c.field-meta.xml
<CustomField>
    <fullName>FS_NumberofMembers__c</fullName>
    <label>Number of Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>