unpackaged/main/default/objects/Account/fields/FS_NYSBA_ID__c.field-meta.xml
<CustomField>
    <fullName>FS_NYSBA_ID__c</fullName>
    <label>NYSBA ID</label>
    <type>AutoNumber</type>
</CustomField>