unpackaged/main/default/objects/Account/fields/FS_Organization_Practice_Interests__c.field-meta.xml
<CustomField>
    <fullName>FS_Organization_Practice_Interests__c</fullName>
    <label>Organization Practice Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Administrative Law</fullName>
            </value>
            <value>
                <fullName>Adoption &amp; Foster Care</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Alternative Dispute Resolution (General)</fullName>
            </value>
            <value>
                <fullName>Animal Law</fullName>
            </value>
            <value>
                <fullName>Antitrust &amp; Trade (General)</fullName>
            </value>
            <value>
                <fullName>Appellate Practice</fullName>
            </value>
            <value>
                <fullName>Arbitration</fullName>
            </value>
            <value>
                <fullName>Attorney Escrow/IOLA</fullName>
            </value>
            <value>
                <fullName>Attorneys of Color</fullName>
            </value>
            <value>
                <fullName>Attorney Wellness</fullName>
            </value>
            <value>
                <fullName>Banking</fullName>
            </value>
            <value>
                <fullName>Bankruptcy/Insolvency</fullName>
            </value>
            <value>
                <fullName>Billing &amp; Law Office Economics</fullName>
            </value>
            <value>
                <fullName>Biotechnology</fullName>
            </value>
            <value>
                <fullName>Business &amp; Corporate (General)</fullName>
            </value>
            <value>
                <fullName>Business Organizations/Corporate Structure</fullName>
            </value>
            <value>
                <fullName>Career</fullName>
            </value>
            <value>
                <fullName>Children &amp; Juvenile Justice</fullName>
            </value>
            <value>
                <fullName>Civic Education</fullName>
            </value>
            <value>
                <fullName>Civility &amp; Client Relations</fullName>
            </value>
            <value>
                <fullName>Civil Litigation</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Commercial Litigation</fullName>
            </value>
            <value>
                <fullName>Condominiums &amp; Cooperatives</fullName>
            </value>
            <value>
                <fullName>Conflicts of Interest</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Contracts (General)</fullName>
            </value>
            <value>
                <fullName>Copyright</fullName>
            </value>
            <value>
                <fullName>Corporate/Business Tax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>