unpackaged/main/default/objects/Account/fields/FS_OrganizationSizeSource__c.field-meta.xml
<CustomField>
    <fullName>FS_OrganizationSizeSource__c</fullName>
    <label>Organization Size Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Contact/Manager</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>System Match</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>