unpackaged/main/default/objects/Account/fields/FS_OrgSizeAttorneysinOrganization__c.field-meta.xml
<CustomField>
    <fullName>FS_OrgSizeAttorneysinOrganization__c</fullName>
    <label>Org Size (Attorneys in Organization)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>02-05</fullName>
            </value>
            <value>
                <fullName>06-09</fullName>
            </value>
            <value>
                <fullName>10-19</fullName>
            </value>
            <value>
                <fullName>100+</fullName>
            </value>
            <value>
                <fullName>20-49</fullName>
            </value>
            <value>
                <fullName>50-99</fullName>
            </value>
            <value>
                <fullName>SOLO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>