unpackaged/main/default/objects/Account/fields/FS_Practice_Setting_Type__c.field-meta.xml
<CustomField>
    <fullName>FS_Practice_Setting_Type__c</fullName>
    <label>Practice Setting Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Local/Municipal/County</fullName>
            </value>
            <value>
                <fullName>Military</fullName>
            </value>
            <value>
                <fullName>Foreign (outside of U.S.)</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Consumer Goods/Retail</fullName>
            </value>
            <value>
                <fullName>Media/Entertainment</fullName>
            </value>
            <value>
                <fullName>Vendor/Supplier of services for attorneys</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Public Utilities/Energy</fullName>
            </value>
            <value>
                <fullName>Healthcare (for profit)</fullName>
            </value>
            <value>
                <fullName>Information Technology</fullName>
            </value>
            <value>
                <fullName>New York State</fullName>
            </value>
            <value>
                <fullName>Federal (U.S.)</fullName>
            </value>
            <value>
                <fullName>Administrative Law Courts</fullName>
            </value>
            <value>
                <fullName>Foreign Courts (outside of U.S.)</fullName>
            </value>
            <value>
                <fullName>International Courts/Tribunals</fullName>
            </value>
            <value>
                <fullName>Full-Service (Multi-Department) Law Firm</fullName>
            </value>
            <value>
                <fullName>Boutique (single focus) Law Firm</fullName>
            </value>
            <value>
                <fullName>General Practice Law Firm</fullName>
            </value>
            <value>
                <fullName>Arbitration/Mediation</fullName>
            </value>
            <value>
                <fullName>Online legal services provider</fullName>
            </value>
            <value>
                <fullName>Law School</fullName>
            </value>
            <value>
                <fullName>College/University</fullName>
            </value>
            <value>
                <fullName>High School (9-12)</fullName>
            </value>
            <value>
                <fullName>Elementary/Middle/Jr. High School (K-8)</fullName>
            </value>
            <value>
                <fullName>Library</fullName>
            </value>
            <value>
                <fullName>Legal Services Provider</fullName>
            </value>
            <value>
                <fullName>Other Non-Profit (non-legal services)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>