unpackaged/main/default/objects/Account/fields/FS_PreferredMailingAddressforDirectory__c.field-meta.xml
<CustomField>
    <fullName>FS_PreferredMailingAddressforDirectory__c</fullName>
    <label>Preferred Mailing Address for Directory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Work</fullName>
            </value>
            <value>
                <fullName>Bar Association</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>