unpackaged/main/default/objects/Account/fields/FS_Public_Official_User__c.field-meta.xml
<CustomField>
    <fullName>FS_Public_Official_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Public Official (User)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Public Official (User))</relationshipLabel>
    <relationshipName>PublicOfficial</relationshipName>
    <type>Lookup</type>
</CustomField>