unpackaged/main/default/objects/Account/fields/FS_School_Type__c.field-meta.xml
<CustomField>
    <fullName>FS_School_Type__c</fullName>
    <label>School Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Law School</fullName>
            </value>
            <value>
                <fullName>School (K-12)</fullName>
            </value>
            <value>
                <fullName>Colleges/Universities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>