unpackaged/main/default/objects/Account/fields/FS_Shipping_County__c.field-meta.xml
<CustomField>
    <fullName>FS_Shipping_County__c</fullName>
    <formula>IF(ShippingState == 'New York', FS_API_Shipping_County__c, IF(ShippingState == '', '', 'Out of State'))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping County</label>
    <type>Text</type>
</CustomField>