unpackaged/main/default/objects/Account/fields/FS_ShowinDirectory__c.field-meta.xml
<CustomField>
    <fullName>FS_ShowinDirectory__c</fullName>
    <label>Show in Directory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Do Not Show in Bar Directory</fullName>
                <default>true</default>
                <label>Do Not Show in Bar Directory</label>
            </value>
            <value>
                <fullName>Show in Bar Directory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>