unpackaged/main/default/objects/Account/fields/FS_Staff_Only_Primary_Organization_Type__c.field-meta.xml
<CustomField>
    <fullName>FS_Staff_Only_Primary_Organization_Type__c</fullName>
    <label>Staff Only - Primary Organization Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Decision Making Day Center</fullName>
            </value>
            <value>
                <fullName>Hotel/Venue</fullName>
            </value>
            <value>
                <fullName>NYSBA Member Benefits Partner</fullName>
            </value>
            <value>
                <fullName>NYSBA Vendor</fullName>
            </value>
            <value>
                <fullName>Sponsor - Financial</fullName>
            </value>
            <value>
                <fullName>Sponsor - Non-Financial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>