unpackaged/main/default/objects/Account/fields/FS_Venue_entry_instructions__c.field-meta.xml
<CustomField>
    <fullName>FS_Venue_entry_instructions__c</fullName>
    <label>Venue entry instructions</label>
    <length>650</length>
    <type>LongTextArea</type>
</CustomField>