unpackaged/main/default/objects/Account/fields/GDO_Directory_Image__c.field-meta.xml
<CustomField>
    <fullName>GDO_Directory_Image__c</fullName>
    <description>Used as the image field for the GDO Account directory.</description>
    <inlineHelpText>Used as the image field for the GDO Account directory.</inlineHelpText>
    <label>GDO Directory Image</label>
    <type>Url</type>
</CustomField>