unpackaged/main/default/objects/Account/fields/Netsuite_ID__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_ID__c</fullName>
    <description>ID of the record created in Netsuite</description>
    <label>Netsuite ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>