unpackaged/main/default/objects/Account/recordTypes/FS_Bar_Association.recordType-meta.xml
<RecordType>
    <fullName>FS_Bar_Association</fullName>
    <active>true</active>
    <label>Bar Association</label>
</RecordType>