unpackaged/main/default/objects/Account/recordTypes/FS_Educational_Institution.recordType-meta.xml
<RecordType>
    <fullName>FS_Educational_Institution</fullName>
    <active>true</active>
    <label>Educational Institution</label>
</RecordType>