unpackaged/main/default/objects/Account/recordTypes/FS_Hotels_Venues.recordType-meta.xml
<RecordType>
    <fullName>FS_Hotels_Venues</fullName>
    <active>true</active>
    <label>Hotels/Venues</label>
</RecordType>