unpackaged/main/default/objects/Account/recordTypes/FS_Law_firm.recordType-meta.xml
<RecordType>
    <fullName>FS_Law_firm</fullName>
    <active>true</active>
    <label>Law firm</label>
</RecordType>