unpackaged/main/default/objects/Account/recordTypes/FS_Library.recordType-meta.xml
<RecordType>
    <fullName>FS_Library</fullName>
    <active>true</active>
    <label>Library</label>
</RecordType>