unpackaged/main/default/objects/Account/recordTypes/FS_Organization.recordType-meta.xml
<RecordType>
    <fullName>FS_Organization</fullName>
    <active>true</active>
    <label>Organization</label>
</RecordType>